--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR Zoológico</title>
+    <link rel="stylesheet" href="../src/styles/main.css" />
   </head>
   <body>
     <div id="root"></div>
