--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR Zoológico</title>
-    <link rel="stylesheet" href="../src/styles/main.css" />
+
+    <!-- Optional: include model-viewer if you're not importing it in JS -->
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="../src/index.js"></script>
   </body>
 </html>
